Added test implementation for findByPageable on PersonRepository